--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
 </head>
 <body>
-    <h1>Olá</h1>
-    <img src="./images/backend.png" alt="">
+    <header class="hero">
+        <div class="container">
+            <img class="hero__logo" src="./images/ebac_logo.svg" alt="EBAC">
+            <p class="hero__text">
+                o maior evento de tecnologia do Brasil começa em 10d 12h 20m 15s
+            </p>
+            <div class="infos-bar">
+                <ul class="infos-bar__infos">
+                    <li class="infos-bar__infos__item">
+                        <b>Localização</b>
+                        Allianz Parque - Barra Funda - São Paulo
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <b>Preço</b>
+                        A partir de R$120,00
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <b>Quando</b>
+                        12/12/2024 às 19hrs
+                    </li>
+                </ul>
+                <a href="#" class="button button--primary">
+                    Garanta a sua vaga
+                </a>
+            </div>
+        </div>
+    </header>
+
+    <section class="event">
+        <div class="container">
+            <div class="event__details">
+                <h2 class="event__details__title">Front-end</h2>
+                <p class="event__details__description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat, repellendus laudantium aperiam recusandae, aliquid fugiat officia nostrum inventore sint amet minima. Atque tempore accusamus eveniet dolor alias maxime in fugit?</p>
+            </div>
+            <img class="event__images" src="./images/frontend.png" alt="Front-end">
+        </div>
+    </section>
     <script src="./scripts/main.js"></script>
 </body>
 </html>
